--- a/coursera_capstone_w3_a.ipynb
+++ b/coursera_capstone_w3_a.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
        "1      M2A  Not assigned  Not assigned"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
        "3      M4A  North York  Victoria Village"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "3      M4A  North York  Victoria Village"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
        "M1C      Scarborough                  3"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "M1C      Scarborough                  3               "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -562,13 +562,13 @@
        "      <td>M1B</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>2</td>\n",
-       "      <td>Rouge,Malvern, Rouge, Malvern</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>M1C</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>3</td>\n",
-       "      <td>Highland Creek,Rouge Hill,Port Union, Highland...</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -580,13 +580,13 @@
        "M1B      Scarborough                  2   \n",
        "M1C      Scarborough                  3   \n",
        "\n",
-       "                                                         Neighbourhoods  \n",
-       "Postcode Borough                                                         \n",
-       "M1B      Scarborough                      Rouge,Malvern, Rouge, Malvern  \n",
-       "M1C      Scarborough  Highland Creek,Rouge Hill,Port Union, Highland...  "
+       "                                              Neighbourhoods  \n",
+       "Postcode Borough                                              \n",
+       "M1B      Scarborough                          Rouge, Malvern  \n",
+       "M1C      Scarborough  Highland Creek, Rouge Hill, Port Union  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -605,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -648,14 +648,14 @@
        "      <td>M1B</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>2</td>\n",
-       "      <td>Rouge,Malvern, Rouge, Malvern</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>M1C</td>\n",
        "      <td>Scarborough</td>\n",
        "      <td>3</td>\n",
-       "      <td>Highland Creek,Rouge Hill,Port Union, Highland...</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -666,12 +666,12 @@
        "0      M1B  Scarborough                  2   \n",
        "1      M1C  Scarborough                  3   \n",
        "\n",
-       "                                      Neighbourhoods  \n",
-       "0                      Rouge,Malvern, Rouge, Malvern  \n",
-       "1  Highland Creek,Rouge Hill,Port Union, Highland...  "
+       "                           Neighbourhoods  \n",
+       "0                          Rouge, Malvern  \n",
+       "1  Highland Creek, Rouge Hill, Port Union  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -728,151 +728,151 @@
        "      <td>0</td>\n",
        "      <td>M1B</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Rouge,Malvern, Rouge, Malvern</td>\n",
+       "      <td>Rouge, Malvern</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>1</td>\n",
        "      <td>M1C</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Highland Creek,Rouge Hill,Port Union, Highland...</td>\n",
+       "      <td>Highland Creek, Rouge Hill, Port Union</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>2</td>\n",
        "      <td>M1E</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Guildwood,Morningside,West Hill, Guildwood, Mo...</td>\n",
+       "      <td>Guildwood, Morningside, West Hill</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>3</td>\n",
        "      <td>M1G</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Woburn, Woburn</td>\n",
+       "      <td>Woburn</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>4</td>\n",
        "      <td>M1H</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Cedarbrae, Cedarbrae</td>\n",
+       "      <td>Cedarbrae</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>5</td>\n",
        "      <td>M1J</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Scarborough Village, Scarborough Village</td>\n",
+       "      <td>Scarborough Village</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>6</td>\n",
        "      <td>M1K</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>East Birchmount Park,Ionview,Kennedy Park, Eas...</td>\n",
+       "      <td>East Birchmount Park, Ionview, Kennedy Park</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>7</td>\n",
        "      <td>M1L</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Clairlea,Golden Mile,Oakridge, Clairlea, Golde...</td>\n",
+       "      <td>Clairlea, Golden Mile, Oakridge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>8</td>\n",
        "      <td>M1M</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Cliffcrest,Cliffside,Scarborough Village West,...</td>\n",
+       "      <td>Cliffcrest, Cliffside, Scarborough Village West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>9</td>\n",
        "      <td>M1N</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Birch Cliff,Cliffside West, Birch Cliff, Cliff...</td>\n",
+       "      <td>Birch Cliff, Cliffside West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>10</td>\n",
        "      <td>M1P</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Dorset Park,Scarborough Town Centre,Wexford He...</td>\n",
+       "      <td>Dorset Park, Scarborough Town Centre, Wexford ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>11</td>\n",
        "      <td>M1R</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Maryvale,Wexford, Maryvale, Wexford</td>\n",
+       "      <td>Maryvale, Wexford</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>12</td>\n",
        "      <td>M1S</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Agincourt, Agincourt</td>\n",
+       "      <td>Agincourt</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>13</td>\n",
        "      <td>M1T</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Clarks Corners,Sullivan,Tam O'Shanter, Clarks ...</td>\n",
+       "      <td>Clarks Corners, Sullivan, Tam O'Shanter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>14</td>\n",
        "      <td>M1V</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Agincourt North,L'Amoreaux East,Milliken,Steel...</td>\n",
+       "      <td>Agincourt North, L'Amoreaux East, Milliken, St...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>15</td>\n",
        "      <td>M1W</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>L'Amoreaux West, L'Amoreaux West</td>\n",
+       "      <td>L'Amoreaux West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>16</td>\n",
        "      <td>M1X</td>\n",
        "      <td>Scarborough</td>\n",
-       "      <td>Upper Rouge, Upper Rouge</td>\n",
+       "      <td>Upper Rouge</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>17</td>\n",
        "      <td>M2H</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Hillcrest Village, Hillcrest Village</td>\n",
+       "      <td>Hillcrest Village</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>18</td>\n",
        "      <td>M2J</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Fairview,Henry Farm,Oriole, Fairview, Henry Fa...</td>\n",
+       "      <td>Fairview, Henry Farm, Oriole</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>19</td>\n",
        "      <td>M2K</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Bayview Village, Bayview Village</td>\n",
+       "      <td>Bayview Village</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>20</td>\n",
        "      <td>M2L</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Silver Hills,York Mills, Silver Hills, York Mills</td>\n",
+       "      <td>Silver Hills, York Mills</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>21</td>\n",
        "      <td>M2M</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Newtonbrook,Willowdale, Newtonbrook, Willowdale</td>\n",
+       "      <td>Newtonbrook, Willowdale</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>22</td>\n",
        "      <td>M2N</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Willowdale South, Willowdale South</td>\n",
+       "      <td>Willowdale South</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>23</td>\n",
        "      <td>M2P</td>\n",
        "      <td>North York</td>\n",
-       "      <td>York Mills West, York Mills West</td>\n",
+       "      <td>York Mills West</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>24</td>\n",
        "      <td>M2R</td>\n",
        "      <td>North York</td>\n",
-       "      <td>Willowdale West, Willowdale West</td>\n",
+       "      <td>Willowdale West</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -880,34 +880,34 @@
       ],
       "text/plain": [
        "   Postcode      Borough                                     Neighbourhoods\n",
-       "0       M1B  Scarborough                      Rouge,Malvern, Rouge, Malvern\n",
-       "1       M1C  Scarborough  Highland Creek,Rouge Hill,Port Union, Highland...\n",
-       "2       M1E  Scarborough  Guildwood,Morningside,West Hill, Guildwood, Mo...\n",
-       "3       M1G  Scarborough                                     Woburn, Woburn\n",
-       "4       M1H  Scarborough                               Cedarbrae, Cedarbrae\n",
-       "5       M1J  Scarborough           Scarborough Village, Scarborough Village\n",
-       "6       M1K  Scarborough  East Birchmount Park,Ionview,Kennedy Park, Eas...\n",
-       "7       M1L  Scarborough  Clairlea,Golden Mile,Oakridge, Clairlea, Golde...\n",
-       "8       M1M  Scarborough  Cliffcrest,Cliffside,Scarborough Village West,...\n",
-       "9       M1N  Scarborough  Birch Cliff,Cliffside West, Birch Cliff, Cliff...\n",
-       "10      M1P  Scarborough  Dorset Park,Scarborough Town Centre,Wexford He...\n",
-       "11      M1R  Scarborough                Maryvale,Wexford, Maryvale, Wexford\n",
-       "12      M1S  Scarborough                               Agincourt, Agincourt\n",
-       "13      M1T  Scarborough  Clarks Corners,Sullivan,Tam O'Shanter, Clarks ...\n",
-       "14      M1V  Scarborough  Agincourt North,L'Amoreaux East,Milliken,Steel...\n",
-       "15      M1W  Scarborough                   L'Amoreaux West, L'Amoreaux West\n",
-       "16      M1X  Scarborough                           Upper Rouge, Upper Rouge\n",
-       "17      M2H   North York               Hillcrest Village, Hillcrest Village\n",
-       "18      M2J   North York  Fairview,Henry Farm,Oriole, Fairview, Henry Fa...\n",
-       "19      M2K   North York                   Bayview Village, Bayview Village\n",
-       "20      M2L   North York  Silver Hills,York Mills, Silver Hills, York Mills\n",
-       "21      M2M   North York    Newtonbrook,Willowdale, Newtonbrook, Willowdale\n",
-       "22      M2N   North York                 Willowdale South, Willowdale South\n",
-       "23      M2P   North York                   York Mills West, York Mills West\n",
-       "24      M2R   North York                   Willowdale West, Willowdale West"
+       "0       M1B  Scarborough                                     Rouge, Malvern\n",
+       "1       M1C  Scarborough             Highland Creek, Rouge Hill, Port Union\n",
+       "2       M1E  Scarborough                  Guildwood, Morningside, West Hill\n",
+       "3       M1G  Scarborough                                             Woburn\n",
+       "4       M1H  Scarborough                                          Cedarbrae\n",
+       "5       M1J  Scarborough                                Scarborough Village\n",
+       "6       M1K  Scarborough        East Birchmount Park, Ionview, Kennedy Park\n",
+       "7       M1L  Scarborough                    Clairlea, Golden Mile, Oakridge\n",
+       "8       M1M  Scarborough    Cliffcrest, Cliffside, Scarborough Village West\n",
+       "9       M1N  Scarborough                        Birch Cliff, Cliffside West\n",
+       "10      M1P  Scarborough  Dorset Park, Scarborough Town Centre, Wexford ...\n",
+       "11      M1R  Scarborough                                  Maryvale, Wexford\n",
+       "12      M1S  Scarborough                                          Agincourt\n",
+       "13      M1T  Scarborough            Clarks Corners, Sullivan, Tam O'Shanter\n",
+       "14      M1V  Scarborough  Agincourt North, L'Amoreaux East, Milliken, St...\n",
+       "15      M1W  Scarborough                                    L'Amoreaux West\n",
+       "16      M1X  Scarborough                                        Upper Rouge\n",
+       "17      M2H   North York                                  Hillcrest Village\n",
+       "18      M2J   North York                       Fairview, Henry Farm, Oriole\n",
+       "19      M2K   North York                                    Bayview Village\n",
+       "20      M2L   North York                           Silver Hills, York Mills\n",
+       "21      M2M   North York                            Newtonbrook, Willowdale\n",
+       "22      M2N   North York                                   Willowdale South\n",
+       "23      M2P   North York                                    York Mills West\n",
+       "24      M2R   North York                                    Willowdale West"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,11 +934,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "result.to_pickle('toronto_postal_codes.pckl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(103, 3)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_boroughs.shape"
    ]
   },
   {
